--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
-      rel="stylesheet"
+      rel="stylesheet" />
+  
+    <link rel="icon" type="image/x-icon" href="assets/profile.png">
+    
 </head>
 <body>
     <header id="header">
@@ -41,21 +44,61 @@
           <div class="container grid">
             <div class="image">
               <img
-                src="assets/Design_sem_nome-removebg-preview.png"
+                src="assets/eu.png"
                 alt="foto do usúario"
               />
             </div>
             <div class="text">
-              <h2 class="title">Saúde natural para os seus cabelos</h2>
+              <h1 class="title">Desenvolvedor front-end</h1>
               <p>
-                Um salão exclusivo em São Paulo, especializado em tratamentos
-                naturais.
+                  Conhecimento em desenvolvimento Front-end: Html, Css, JavaScript, ReactJs, TypeScript. Experiência com NodeJS, MySQL, PostgreSQL.
               </p>
-              <a class="button" href="#">Agendar um horário</a>
+              <a 
+              class="button" 
+              id="linkedin" 
+              href="https://www.linkedin.com/in/luisdasilvahenrique/" 
+              target="_blank">Linkedin</a>
+
+              <a 
+              class="button" 
+              id="github" 
+              href="https://www.github.com/luisdasilvahenrique" target="_blank">GitHub</a>
             </div>
           </div>
         </section>
   
         <div class="divider-1"></div>
+
+         <!-- ABOUT -->
+      <section class="section" id="about">
+        <div class="container grid">
+          <div class="image">
+            <img
+              src="[adicionar foto]"
+              alt="3 mulheres sorrindo"
+            />
+          </div>
+          <div class="text">
+            <h2 class="title">Sobre mim</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+              Necessitatibus deleniti perferendis vel molestiae soluta, quaerat
+              beatae dicta ducimus praesentium architecto harum dolorum
+              distinctio illo earum assumenda itaque. Omnis, quam repellat.
+            </p>
+            <br />
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure
+              illum ratione impedit quae eum quis adipisci asperiores, est
+              doloribus distinctio excepturi minima eius dolore! Perferendis
+              laborum illo aspernatur repellendus ipsum.
+            </p>
+           
+          </div>
+        </div>
+      </section>
+
+      <div class="divider-2"></div>
+
 </body>
 </html>
