--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     />
 
     <!-- Fontes -->
+
+     <!-- Icones -->
+     <link rel="stylesheet" href="assets/fonts/style.css" />
+
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
