--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 </head>
 <body>
     <header id="header">
-        <nav class="container">
-          <a class="logo" href="#">Luís<span>Henrique</span>.</a>
+        <nav class="container"> 
+          <a class="logo" href="#">&lt;Luís<span>Henrique&sol;&GT;</span></a>
           <!-- menu -->
           <div class="menu">
             <ul class="grid">
@@ -143,6 +143,8 @@
       </section>
 
       <div class="divider-1"></div>
+
+
       
 
        <!-- swiper -->
