--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
             <p>
               Sempre gostei de desafios, sou skatista desde os 11 anos, e isso sempre me ajudou a querer novos desafios e me arriscar no desconhecido.
             </p>
-           
+            <br>
+            <a type="button" class="button" href="assets/Currículo.pdf" download="Curriculo">Currículo</a>
           </div>
         </div>
       </section>
@@ -112,8 +113,9 @@
           </header>
           <div class="cards grid">
             <div class="card">
-              <i class="icon-woman-hair"></i>
-              <h3 class="title">Terapia capilar</h3>
+              <!-- <i class="icon-woman-hair"></i> -->
+              <img src="[imagem do projeto]" alt="">
+              <h3 class="title">Happy</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
                 distinctio neque blanditiis, dolorem aperiam nulla explicabo
@@ -121,8 +123,9 @@
               </p>
             </div>
             <div class="card">
-              <i class="icon-trim"></i>
-              <h3 class="title">Cortes</h3>
+              <!-- <i class="icon-trim"></i> -->
+              <img src="[imagem do projeto]" alt="">
+              <h3 class="title">JobsCalc</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
                 distinctio neque blanditiis, dolorem aperiam nulla explicabo
@@ -130,8 +133,9 @@
               </p>
             </div>
             <div class="card">
-              <i class="icon-cosmetic"></i>
-              <h3 class="title">Tratamentos</h3>
+              <!-- <i class="icon-cosmetic"></i> -->
+              <img src="[imagem do projeto]" alt="">
+              <h3 class="title">dt.mony</h3>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit
                 distinctio neque blanditiis, dolorem aperiam nulla explicabo
