--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
               <li><a class="title" href="#home">Início</a></li>
               <li><a class="title" href="#about">Sobre mim</a></li>
               <li><a class="title" href="#services">Projetos</a></li>
+              <li><a class="title" href="#contact">Contato</a></li>
             </ul>
           </div>
           <!-- /menu -->
@@ -149,10 +150,64 @@
       <div class="divider-1"></div>
 
 
-      
+      <section class="section" id="contact">
+        <div class="container grid">
+          <div class="text">
+            <h2 class="title">Entre em contato com a gente!</h2>
+            <p>
+              Entre em contato com a Beautysalon, queremos tirar suas dúvidas,
+              ouvir suas críticas e sugestões.
+            </p>
+            <a
+              href="https://api.whatsapp.com/send?phone=+5588998538926&text=Oi! Gostaria de agendar um horário"
+              class="button"
+              target="_blank"
+              ><i class="icon-whatsapp"></i> Entrar em contato</a
+            >
+          </div>
+
+          <div class="links">
+            <ul class="grid">
+              <!-- <li><i class="icon-phone"></i> 55 88 998538926</li> -->
+              <li><i class="icon-map-pin"></i> Mombaça-ce</li>
+              <li><i class="icon-mail"></i> luisenriklh1177027@gmail.com</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <div class="divider-1"></div>
+    </main>
+
+    <footer class="section">
+      <div class="container grid">
+        <div class="brand">
+          <a class="logo logo-alt" href="#home">Luis<span>Henrique</span>.</a>
+          <p>©2022.</p>
+          <p>Todos os direitos reservados.</p>
+        </div>
+
+        <div class="social grid">
+          <a href="https://instagram.com" target="_blank">
+            <i class="icon-instagram"></i>
+          </a>
+          <a href="https://facebook.com" target="_blank">
+            <i class="icon-facebook"></i
+          ></a>
+          <a href="https://youtube.com" target="_blank"
+            ><i class="icon-youtube"></i
+          ></a>
+        </div>
+      </div>
+    </footer>
+
+    <a href="#home" class="back-to-top"><i class="icon-arrow-up"></i></a>
+
 
        <!-- swiper -->
       <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+      <script src="https://unpkg.com/scrollreveal"></script>
 
       <script src="main.js"></script>
 </body>
